backend/clouddm-plugins/clouddm-ds/ds-mongodb/src/main/java/com/clougence/clouddm/ds/mongodb/parser/antlr/MongoParser.java
// Generated from MongoParser.g4 by ANTLR 4.9.3
package com.clougence.clouddm.ds.mongodb.parser.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MongoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SPACE=1, COMMENT1=2, COMMENT2=3, DB=4, SHOW=5, DATABASES=6, DBS=7, COLLECTIONS=8, 
		USE=9, SERVER_BUILD_INFO=10, HELLO=11, SERVER_STATUS=12, DROP_DATABASE=13, 
		CREATE_COLLECTION=14, STATS=15, SET_PROFILING_LEVEL=16, ADMIN_COMMAND=17, 
		GET_COLLECTION=18, AGGREGATE=19, CURRENT_OP=20, KILL_OP=21, COUNT_DOCUMENTS=22, 
		CREATE_INDEXES=23, CREATE_INDEX=24, DISTINCT=25, DROP_INDEXES=26, DROP_INDEX=27, 
		COUNT=28, ESTIMATED_DOCUMENT_COUNT=29, GET_INDEXES=30, LATENCY_STATS=31, 
		RENAME_COLLECTION=32, REPLACE_ONE=33, VALIDATE=34, EXPLAIN=35, BULK_WRITE=36, 
		DATA_SIZE=37, RUN_COMMAND=38, HIDE_INDEX=39, UNHIDE_INDEX=40, FIND=41, 
		S_SKIP=42, LIMIT=43, SORT=44, S_COMMENT=45, BATCH_SIZE=46, MAX_TIME_MS=47, 
		COLLATION=48, LET=49, MAX=50, MIN=51, RETURN_KEY=52, SHOW_RECORD_ID=53, 
		NO_CURSOR_TIMEOUT=54, MAX_AWAIT_TIME_MS=55, ALLOW_DISK_USE=56, FIND_ONE=57, 
		FIND_ONE_AND_DELETE=58, FIND_ONE_AND_REPLACE=59, FIND_ONE_AND_UPDATE=60, 
		INSERT=61, INSERT_ONE=62, INSERT_MANY=63, DELETE_ONE=64, DELETE_MANY=65, 
		UPDATE_ONE=66, UPDATE_MANY=67, UPDATE=68, DROP=69, WATCH=70, VERSION=71, 
		SHUTDOWN_SERVER=72, SET_LOG_LEVEL=73, SERVER_CMD_LINE_OPTS=74, ROTATE_CERTIFICATES=75, 
		PRINT_SHARDING_STATUS=76, PRINT_SECONDARY_REPLICATION_INFO=77, PRINT_REPLICATION_INFO=78, 
		PRINT_COLLECTION_STATS=79, LIST_COMMANDS=80, HOST_INFO=81, HELP=82, GET_SIBLING_DB=83, 
		GET_REPLICATION_INFO=84, GET_PROFILING_STATUS=85, GET_NAME=86, GET_MONGO=87, 
		GET_LOG_COMPONENTS=88, GET_COLLECTION_NAMES=89, GET_COLLECTION_INFOS=90, 
		FSYNC_UNLOCK=91, FSYNC_LOCK=92, CREATE_VIEW=93, NEW=94, TRUE=95, FALSE=96, 
		NULL=97, STRING=98, DOT=99, LS_BRACKET=100, RS_BRACKET=101, LM_BRACKET=102, 
		RM_BRACKET=103, LB_BRACKET=104, RB_BRACKET=105, COMMA=106, COLON=107, 
		DOUBLE_QUOTA=108, SINGLE_QUOTA=109, SEMI=110, ID=111, NUMBER=112;
	public static final int
		RULE_root = 0, RULE_command = 1, RULE_functionCommand = 2, RULE_use = 3, 
		RULE_databaseFunction = 4, RULE_showFunction = 5, RULE_environmentFunction = 6, 
		RULE_collectionFunction = 7, RULE_collectionMethod = 8, RULE_dataSize = 9, 
		RULE_explain = 10, RULE_explainMethod = 11, RULE_validate = 12, RULE_replaceOne = 13, 
		RULE_renameCollection = 14, RULE_latencyStats = 15, RULE_getIndexes = 16, 
		RULE_hideIndex = 17, RULE_estimatedDocumentCount = 18, RULE_count = 19, 
		RULE_dropIndex = 20, RULE_dropIndexes = 21, RULE_distinct = 22, RULE_createIndex = 23, 
		RULE_createIndexes = 24, RULE_aggregate = 25, RULE_countDocuments = 26, 
		RULE_find = 27, RULE_findConstarint = 28, RULE_findOne = 29, RULE_findOneAndDelete = 30, 
		RULE_findOneAndReplace = 31, RULE_findOneAndUpdate = 32, RULE_insert = 33, 
		RULE_insertOne = 34, RULE_insertMany = 35, RULE_deleteOne = 36, RULE_deleteMany = 37, 
		RULE_update = 38, RULE_drop = 39, RULE_collectionName = 40, RULE_jsonString = 41, 
		RULE_obj = 42, RULE_pair = 43, RULE_key = 44, RULE_arr = 45, RULE_value = 46, 
		RULE_keyWordId = 47;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "command", "functionCommand", "use", "databaseFunction", "showFunction", 
			"environmentFunction", "collectionFunction", "collectionMethod", "dataSize", 
			"explain", "explainMethod", "validate", "replaceOne", "renameCollection", 
			"latencyStats", "getIndexes", "hideIndex", "estimatedDocumentCount", 
			"count", "dropIndex", "dropIndexes", "distinct", "createIndex", "createIndexes", 
			"aggregate", "countDocuments", "find", "findConstarint", "findOne", "findOneAndDelete", 
			"findOneAndReplace", "findOneAndUpdate", "insert", "insertOne", "insertMany", 
			"deleteOne", "deleteMany", "update", "drop", "collectionName", "jsonString", 
			"obj", "pair", "key", "arr", "value", "keyWordId"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'db'", "'show'", "'databases'", "'dbs'", "'collections'", 
			"'use'", "'serverBuildInfo'", "'hello'", "'serverStatus'", "'dropDatabase'", 
			"'createCollection'", "'stats'", "'setProfilingLevel'", "'adminCommand'", 
			"'getCollection'", "'aggregate'", "'currentOp'", "'killOp'", "'countDocuments'", 
			"'createIndexes'", "'createIndex'", "'distinct'", "'dropIndexes'", "'dropIndex'", 
			"'count'", "'estimatedDocumentCount'", "'getIndexes'", "'latencyStats'", 
			"'renameCollection'", "'replaceOne'", "'validate'", "'explain'", "'bulkWrite'", 
			"'dataSize'", "'runCommand'", "'hideIndex'", "'unhideIndex'", "'find'", 
			"'skip'", "'limit'", "'sort'", "'comment'", "'batchSize'", "'maxTimeMS'", 
			"'collation'", "'let'", "'max'", "'min'", "'returnKey'", "'showRecordId'", 
			"'noCursorTimeout'", "'maxAwaitTimeMS'", "'allowDiskUse'", "'findOne'", 
			"'findOneAndDelete'", "'findOneAndReplace'", "'findOneAndUpdate'", "'insert'", 
			"'insertOne'", "'insertMany'", "'deleteOne'", "'deleteMany'", "'updateOne'", 
			"'updateMany'", "'update'", "'drop'", "'watch'", "'version'", "'shutdownServer'", 
			"'setLogLevel'", "'serverCmdLineOpts'", "'rotateCertificates'", "'printShardingStatus'", 
			"'printSecondaryReplicationInfo'", "'printReplicationInfo'", "'printCollectionStats'", 
			"'listCommands'", "'hostInfo'", "'help'", "'getSiblingDB'", "'getReplicationInfo'", 
			"'getProfilingStatus'", "'getName'", "'getMongo'", "'getLogComponents'", 
			"'getCollectionNames'", "'getCollectionInfos'", "'fsyncUnlock'", "'fsyncLock'", 
			"'createView'", "'new'", null, null, null, null, "'.'", "'('", "')'", 
			"'['", "']'", "'{'", "'}'", "','", "':'", "'\"'", "'''", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SPACE", "COMMENT1", "COMMENT2", "DB", "SHOW", "DATABASES", "DBS", 
			"COLLECTIONS", "USE", "SERVER_BUILD_INFO", "HELLO", "SERVER_STATUS", 
			"DROP_DATABASE", "CREATE_COLLECTION", "STATS", "SET_PROFILING_LEVEL", 
			"ADMIN_COMMAND", "GET_COLLECTION", "AGGREGATE", "CURRENT_OP", "KILL_OP", 
			"COUNT_DOCUMENTS", "CREATE_INDEXES", "CREATE_INDEX", "DISTINCT", "DROP_INDEXES", 
			"DROP_INDEX", "COUNT", "ESTIMATED_DOCUMENT_COUNT", "GET_INDEXES", "LATENCY_STATS", 
			"RENAME_COLLECTION", "REPLACE_ONE", "VALIDATE", "EXPLAIN", "BULK_WRITE", 
			"DATA_SIZE", "RUN_COMMAND", "HIDE_INDEX", "UNHIDE_INDEX", "FIND", "S_SKIP", 
			"LIMIT", "SORT", "S_COMMENT", "BATCH_SIZE", "MAX_TIME_MS", "COLLATION", 
			"LET", "MAX", "MIN", "RETURN_KEY", "SHOW_RECORD_ID", "NO_CURSOR_TIMEOUT", 
			"MAX_AWAIT_TIME_MS", "ALLOW_DISK_USE", "FIND_ONE", "FIND_ONE_AND_DELETE", 
			"FIND_ONE_AND_REPLACE", "FIND_ONE_AND_UPDATE", "INSERT", "INSERT_ONE", 
			"INSERT_MANY", "DELETE_ONE", "DELETE_MANY", "UPDATE_ONE", "UPDATE_MANY", 
			"UPDATE", "DROP", "WATCH", "VERSION", "SHUTDOWN_SERVER", "SET_LOG_LEVEL", 
			"SERVER_CMD_LINE_OPTS", "ROTATE_CERTIFICATES", "PRINT_SHARDING_STATUS", 
			"PRINT_SECONDARY_REPLICATION_INFO", "PRINT_REPLICATION_INFO", "PRINT_COLLECTION_STATS", 
			"LIST_COMMANDS", "HOST_INFO", "HELP", "GET_SIBLING_DB", "GET_REPLICATION_INFO", 
			"GET_PROFILING_STATUS", "GET_NAME", "GET_MONGO", "GET_LOG_COMPONENTS", 
			"GET_COLLECTION_NAMES", "GET_COLLECTION_INFOS", "FSYNC_UNLOCK", "FSYNC_LOCK", 
			"CREATE_VIEW", "NEW", "TRUE", "FALSE", "NULL", "STRING", "DOT", "LS_BRACKET", 
			"RS_BRACKET", "LM_BRACKET", "RM_BRACKET", "LB_BRACKET", "RB_BRACKET", 
			"COMMA", "COLON", "DOUBLE_QUOTA", "SINGLE_QUOTA", "SEMI", "ID", "NUMBER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MongoParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MongoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RootContext extends ParserRuleContext {
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public TerminalNode EOF() { return getToken(MongoParser.EOF, 0); }
		public List<TerminalNode> SEMI() { return getTokens(MongoParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(MongoParser.SEMI, i);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MongoParserListener ) ((MongoParserListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MongoParserListener ) ((MongoParserListener)listener).exitRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MongoParserVisitor ) return ((MongoParserVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			command();
			setState(105);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(98); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(97);
						match(SEMI);
						}
						}
						setState(100); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==SEMI );
					setState(102);
					command();
					}
					} 
				}
				setState(107);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMI) {
				{
				{
				setState(108);
				match(SEMI);
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(114);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public FunctionCommandContext functionCommand() {
			return getRuleContext(FunctionCommandContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MongoParserListener ) ((MongoParserListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MongoParserListener ) ((MongoParserListener)listener).exitCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MongoParserVisitor ) return ((MongoParserVisitor<? extends T>)visitor).visitCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_command);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			functionCommand();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionCommandContext extends ParserRuleContext {
		public DatabaseFunctionContext databaseFunction() {
			return getRuleContext(DatabaseFunctionContext.class,0);
		}
		public CollectionFunctionContext collectionFunction() {
			return getRuleContext(CollectionFunctionContext.class,0);
		}
		public EnvironmentFunctionContext environmentFunction() {
			return getRuleContext(EnvironmentFunctionContext.class,0);
		}
		public ShowFunctionContext showFunction() {
			return getRuleContext(ShowFunctionContext.class,0);
		}
		public UseContext use() {
			return getRuleContext(UseContext.class,0);
		}
		public FunctionCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionCommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MongoParserListener ) ((MongoParserListener)listener).enterFunctionCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MongoParserListener ) ((MongoParserListener)listener).exitFunctionCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MongoParserVisitor ) return ((MongoParserVisitor<? extends T>)visitor).visitFunctionCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionCommandContext functionCommand() throws RecognitionException {
		FunctionCommandContext _localctx = new FunctionCommandContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functionCommand);
		try {
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				databaseFunction();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				collectionFunction();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(120);
				environmentFunction();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(121);
				showFunction();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(122);
				use();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UseContext extends ParserRuleContext {
		public TerminalNode USE() { return getToken(MongoParser.USE, 0); }
		public TerminalNode ID() { return getToken(MongoParser.ID, 0); }
		public UseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_use; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MongoParserListener ) ((MongoParserListener)listener).enterUse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MongoParserListener ) ((MongoParserListener)listener).exitUse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MongoParserVisitor ) return ((MongoParserVisitor<? extends T>)visitor).visitUse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UseContext use() throws RecognitionException {
		UseContext _localctx = new UseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_use);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(USE);
			setState(126);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
